modified:   template/data/task3_3.sql 	modified:   template/ecommerce/client/src/app/app.component.ts 	modified:   template/ecommerce/client/src/app/cart.store.ts 	modified:   template/ecommerce/client/src/app/components/category.component.html 	modified:   template/ecommerce/client/src/app/components/category.component.ts 	modified:   template/ecommerce/client/src/app/components/confirm-checkout.component.html 	modified:   template/ecommerce/client/src/app/components/confirm-checkout.component.ts 	modified:   template/ecommerce/client/src/app/components/order-form.component.ts 	modified:   template/ecommerce/src/main/java/vttp/batch4/csf/ecommerce/controllers/OrderController.java

--- a/template/ecommerce/client/src/app/components/category.component.html
+++ b/template/ecommerce/client/src/app/components/category.component.html
@@ -8,15 +8,15 @@
           <img [src]="p.image" width="100">
         </div>
         <div class="prod-detail">
-          Name: <span>{{ p.name }}</span>
+          Name: <span >{{ p.name }}</span>
           Brand: <span>{{ p.brand }}</span>
-          Price: <span>{{ p.price | currency:"INR" }}</span>
+          Price: <span >{{ p.price | currency:"INR" }}</span>
           Discount: <span>{{ p.discountPrice | currency:"INR" }}</span>
           Quantity: <span>{{ p.quantity }}</span>
         </div>
       </div>
       <div class="order-form">
-        <app-order-form [productId]="p.prodId"/>
+        <app-order-form [productId]="p.prodId" [name]="p.name" [price]="p.price"/>
       </div>
     </div>
   </div>
