modified:   template/data/task3_3.sql 	modified:   template/ecommerce/client/src/app/components/confirm-checkout.component.html 	modified:   template/ecommerce/client/src/app/components/confirm-checkout.component.ts 	modified:   template/ecommerce/src/main/java/vttp/batch4/csf/ecommerce/controllers/OrderController.java 	modified:   template/ecommerce/src/main/java/vttp/batch4/csf/ecommerce/repositories/PurchaseOrderRepository.java

--- a/template/ecommerce/client/src/app/components/confirm-checkout.component.html
+++ b/template/ecommerce/client/src/app/components/confirm-checkout.component.html
@@ -48,13 +48,13 @@
   <tbody>
     <tr *ngFor="let i of list">
       <td> {{i.name}} </td>
-      <td> {{i.price}} </td>
+      <td> {{i.price | currency:"INR" }} </td>
       <td> {{i.quantity}} </td>
     </tr>
   </tbody>
   <tfoot>
     <td></td>
     <td>Total: </td>
-    <td> {{total}} </td>
+    <td> {{total| currency:"INR" }} </td>
   </tfoot>
 </table>
